# MusicRecognitionApp

./: CMakeLists.txt  README.md
kernels/: fingerprint.cl
src/: main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h  AudioPlayer.cpp  AudioPlayer.h  WavFile.cpp  WavFile.h
src/db/: Database.cpp  Database.h
src/fingerprint/: FFT.cpp  FFT.h  Fingerprint.cpp  Fingerprint.h
src/opencl/: OpenCLAccel.cpp  OpenCLAccel.h
src/ui/: MainWindow.cpp  MainWindow.h  MetadataDialog.cpp  MetadataDialog.h  mainwindow.ui  metadatadialog.ui
